--- a/style/editTaskBoard.css
+++ b/style/editTaskBoard.css
@@ -26,6 +26,7 @@
 
 #boardEditTask .buttonRequiredField {
   width: 100%;
+  margin-top: 30px;
 }
 
 #boardEditTask .taskButton {
